Avoid using inline cast in mips assembly code.

When building the code with clang the compilation fails due to the
following error:
  "invalid use of a cast in a inline asm context requiring an l-value:
   remove the cast or build with -fheinous-gnu-extensions"

Doing the cast outside of __asm__ block fixes the problem.

R=jar@chromium.org

Bug: 794147
Change-Id: I49bcdbd3d4177cbdafa37ffc2d12983db1fe7621
Reviewed-on: https://chromium-review.googlesource.com/822411
Reviewed-by: Will Harris <wfh@chromium.org>
Commit-Queue: Hugo Holgersson <hugoh@vewd.com>
Cr-Commit-Position: refs/heads/master@{#539103}
Former-commit-id: 17a5affd36ab79fdf00e2e4d283615c7ad3454d3